--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: fast_clicker_env
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python=3.11
   - pytz
   - pyautogui
   - termcolor
